--- a/rest_api/templates/rest_api/index.html
+++ b/rest_api/templates/rest_api/index.html
@@ -5,53 +5,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
 
-<!--var nodes = [-->
-<!--  { id: 1, group: 0, name: "Avó", level:0 },-->
-<!--  { id: 2, group: 0,name: "Avô", level:0 },-->
-<!--  { id: 3,group: 0, name: "To Ze", level:1},-->
-<!--  { id: 4,group: 0, name: "Anabela", level:1},-->
-<!--  { id: 5,group: 0,  name: "Matilde", level:2},-->
-<!--  { id: 6,group: 0, name: "Carolina", level:2},-->
-<!--  { id: 7, group: 0,name: "Francisco", level:2},-->
-<!--]-->
-
-var nodes = [{"id":46,"name":"Carolina Gonçalves"},{"id":47,"name":"Eugénio Pinto"},{"id":48,"name":"Matilde Gonçalves"},{"id":49,"name":"Maria Augusta"},{"id":50,"name":"José Eugénio"},{"id":51,"name":"Eugénia Pinto"},{"id":52,"name":"António Gonçalves"},{"id":53,"name":"Anabela Gonçalves"}]
-
-<!--var nodes = [];-->
-<!--$.getJSON( "http://127.0.0.1:8000/api/person/?format=json", function(json) {nodes = json});-->
-
-<!--var nodes = [];-->
-<!--d3.json( "http://127.0.0.1:8000/api/person/?format=json", function(json) {nodes = json});-->
-
-
-<!--var links = [-->
-<!--  { target: 1, source: 2 , strength: 1 },-->
-<!--  { target: 3, source: 4 , strength: 1 },-->
-
-<!--  { target: 1, source: 3 , strength: 0.5 },-->
-<!--  { target: 2, source: 3 , strength: 0.5 },-->
-
-<!--  { target: 3, source: 5 , strength: 0.5 },-->
-<!--  { target: 3, source: 6 , strength: 0.5 },-->
-<!--  { target: 3, source: 7 , strength: 0.5 },-->
-<!--  { target: 4, source: 5 , strength: 0.5 },-->
-<!--  { target: 4, source: 6 , strength: 0.5 },-->
-<!--  {target: 4, source: 7 , strength: 0.5 },-->
-<!--]-->
-
-var links = [{"source":50,"target":49,"strength":1},{"source":52,"target":53,"strength":1}]
-
-<!--var links = [];-->
-<!--$.getJSON( "http://127.0.0.1:8000/api/family/?format=json", function(familyjson)-->
-<!--{for (i = 0; i < familyjson.length; i++) {-->
-<!--links[i] = {source: familyjson[i].union.person_one.id, target: familyjson[i].union.person_two.id, strength: 1};-->
-<!--}});-->
-
-
-
-
-
-
 function getNeighbors(node) {
   return links.reduce(function (neighbors, link) {
       if (link.target.id === node.id) {
@@ -114,6 +67,17 @@ function selectNode(selectedNode) {
   textElements.attr('fill', function (node) { return getTextColor(node, neighbors) })
   linkElements.attr('stroke', function (link) { return getLinkColor(selectedNode, link) })
 }
+
+
+$.getJSON( "http://127.0.0.1:8000/api/links/?format=json", function(json) {
+
+var links = [];
+{for (i = 0; i < json.length; i++) {
+ {for (j = 0; j < json[0].data.length; j++) {
+    links.push(json[i].data[j])}};
+}};
+
+
 var linkElements = svg.append("g")
   .attr("class", "links")
   .selectAll("line")
@@ -121,6 +85,13 @@ var linkElements = svg.append("g")
   .enter().append("line")
     .attr("stroke-width", 1)
       .attr("stroke", "rgba(50, 50, 50, 0.2)")
+
+
+$.getJSON( "http://127.0.0.1:8000/api/person/?format=json", function(json) {
+
+
+var nodes = json;
+
 var nodeElements = svg.append("g")
   .attr("class", "nodes")
   .selectAll("circle")
@@ -139,6 +110,7 @@ var textElements = svg.append("g")
       .attr("font-size", 15)
       .attr("dx", 15)
     .attr("dy", 4)
+
 simulation.nodes(nodes).on('tick', () => {
   nodeElements
     .attr('cx', function (node) { return node.x })
@@ -153,4 +125,8 @@ simulation.nodes(nodes).on('tick', () => {
     .attr('y2', function (link) { return link.target.y })
 })
 simulation.force("link").links(links)
+//nodes = json
+});
+});
+
 </script>
