--- a/rest_api/templates/rest_api/index.html
+++ b/rest_api/templates/rest_api/index.html
@@ -4,7 +4,10 @@
 <script src="static/rest_api/d3.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
-
+var links=[];
+var nodeElements;
+var textElements;
+var linkElements;
 function getNeighbors(node) {
   return links.reduce(function (neighbors, link) {
       if (link.target.id === node.id) {
@@ -71,14 +74,14 @@ function selectNode(selectedNode) {
 
 $.getJSON( "http://127.0.0.1:8000/api/links/?format=json", function(json) {
 
-var links = [];
+<!--var links = [];-->
 {for (i = 0; i < json.length; i++) {
  {for (j = 0; j < json[i].data.length; j++) {
     links.push(json[i].data[j])}};
 }};
 
 
-var linkElements = svg.append("g")
+linkElements = svg.append("g")
   .attr("class", "links")
   .selectAll("line")
   .data(links)
@@ -92,7 +95,7 @@ $.getJSON( "http://127.0.0.1:8000/api/person/?format=json", function(json) {
 
 var nodes = json;
 
-var nodeElements = svg.append("g")
+ nodeElements = svg.append("g")
   .attr("class", "nodes")
   .selectAll("circle")
   .data(nodes)
@@ -101,7 +104,7 @@ var nodeElements = svg.append("g")
     .attr("fill", getNodeColor)
     .call(dragDrop)
     .on('click', selectNode)
-var textElements = svg.append("g")
+ textElements = svg.append("g")
   .attr("class", "texts")
   .selectAll("text")
   .data(nodes)
