--- a/genealogica/templates/genealogica/index.html
+++ b/genealogica/templates/genealogica/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>Grande Molécula Genealógica Miuzelense</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'genealogica/main.css' %}">
   </head>
   <body>
 
-  <svg width="2000" height="1000"></svg>
-  <script src="static/genealogica/d3.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" charset="utf-8"></script>
+  <script src="static/genealogica/d3_v5.11.0.js"></script>
   <script src="static/genealogica/molecula.js"></script>
 
   </body>
