--- a/genealogica/templates/genealogica/index.html
+++ b/genealogica/templates/genealogica/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
 
-  <script type="text/javascript" charset="utf-8"></script>
+  
+  <div class="search-node">
+      <input type="text" id="search-node" placeholder="Pesquisa">
+  </div>
+
   <script src="static/genealogica/d3_v5.11.0.js"></script>
   <script src="static/genealogica/molecula.js"></script>
 
