--- a/genealogica/static/genealogica/main.css
+++ b/genealogica/static/genealogica/main.css
@@ -1,7 +1,35 @@
 body {
-  margin: 0; 
-  overflow: hidden; 
+  margin: 0;
+  overflow: hidden;
   background-color: rgba(30, 90, 198, .2);
-  /* background-image: url('/static/images/logo.png');
-  background-repeat: no-repeat; */
+}
+
+.search-node {
+  position: absolute;
+  background: none;
+  top: 3%;
+  right: 3%;
+  border: 1px solid #689ba5;
+  border-radius: 10px;
+  width: 20%;
+}
+
+.search-node input {
+  background: none;
+  border: none;
+  padding: 3%;
+  width: 100%;
+  font-family: "Arial";
+  font-size: 12px;
+  color: rgb(70, 70, 70)
+}
+
+input:focus,
+
+select:focus,
+
+textarea:focus,
+
+button:focus {
+  outline: none;
 }
