Add refresh button

--- a/genealogica/templates/genealogica/index.html
+++ b/genealogica/templates/genealogica/index.html
@@ -13,6 +13,12 @@
       <input type="text" id="search-node" placeholder="Pesquisa">
   </div>
 
+  <div class="reshufle-node">
+    <!-- <button id='reshufle-node'>Actualizar</button> -->
+    <button onClick="window.location.reload(true)" id='reshufle-node'>Actualizar</button>
+  </div>
+
+
   <script src="static/genealogica/d3_v5.11.0.js"></script>
   <script src="static/genealogica/molecula.js"></script>
 
