--- a/genealogica/static/genealogica/main.css
+++ b/genealogica/static/genealogica/main.css
@@ -11,7 +11,6 @@ body {
   right: 3%;
   border: 1px solid #689ba5;
   border-radius: 10px;
-  width: 20%;
 }
 
 .search-node input {
@@ -21,7 +20,7 @@ body {
   width: 100%;
   font-family: "Arial";
   font-size: 12px;
-  color: rgb(70, 70, 70)
+  color: rgb(70, 70, 70);
 }
 
 input:focus,
@@ -32,4 +31,21 @@ textarea:focus,
 
 button:focus {
   outline: none;
+}
+
+
+.reshufle-node {
+  position: absolute;
+  top: 6%;
+  right: 3%;
+}
+
+.reshufle-node button{
+  background: none;
+  padding: 3%;
+  width: 5.5em;
+  font-family: "Arial";
+  font-size: 12px;
+  border-radius: 10px;
+  overflow: hidden;
 }
