--- a/genealogica/templates/genealogica/index.html
+++ b/genealogica/templates/genealogica/index.html
@@ -13,9 +13,9 @@
       <input type="text" id="search-node" placeholder="Pesquisa">
   </div>
 
-  <div class="reshufle-node">
-    <!-- <button id='reshufle-node'>Actualizar</button> -->
-    <button onClick="window.location.reload(true)" id='reshufle-node'>Actualizar</button>
+  <div class="reshufle">
+    <!-- <button id='reshufle'>Actualizar</button> -->
+    <button onClick="window.location.reload(true)" id='reshufle'>Actualizar</button>
   </div>
 
 
