--- a/rest_api/templates/rest_api/index.html
+++ b/rest_api/templates/rest_api/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!---
+Comment desneceessario
+-->
 <meta charset="utf-8">
 <svg width="760" height="300"></svg>
 <script src="static/rest_api/d3.js"></script>
